--- a/app/src/main/res/layout/receipt_fragment.xml
+++ b/app/src/main/res/layout/receipt_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,4 +12,22 @@
         android:layout_height="match_parent"
         android:text="Receipt Fragment" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/print_to_log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="print to log from DB"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/add_record_to_db"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="add record to db"
+        app:layout_constraintBottom_toTopOf="@+id/print_to_log"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
