Сохраняем в БД инфо при получении чека на терминал: id, сумма чека, дата/время получения + печати, количество позиций в чеке, номер распечатанного чека.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,10 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <androidx.appcompat.widget.Toolbar
+                app:title="qweqwe"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="25dp"
                 android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
@@ -29,7 +30,7 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabInlineLabel="true"/>
+                app:tabInlineLabel="true" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -40,6 +41,7 @@
             android:layout_weight="1" />
 
     </LinearLayout>
+    <!--android:layout_height="?attr/actionBarSize"-->
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
