--- a/app/src/main/res/layout/receipt_fragment.xml
+++ b/app/src/main/res/layout/receipt_fragment.xml
@@ -7,27 +7,10 @@
     android:background="#2128B3"
     tools:context=".tabs.fragments.ReceiptFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/receipt_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Receipt Fragment" />
-
-    <Button
-        android:id="@+id/print_to_log"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="print to log from DB"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/add_record_to_db"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add record to db"
-        app:layout_constraintBottom_toTopOf="@+id/print_to_log"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:listitem="@layout/receipt_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
