--- a/app/src/main/res/layout/position_item.xml
+++ b/app/src/main/res/layout/position_item.xml
@@ -3,100 +3,149 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp">
 
     <TextView
-        android:drawableLeft="@drawable/ic_baseline_receipt_24"
         android:id="@+id/position_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_baseline_receipt_24"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Обои Артикул № 000004" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/position_price_multiple_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textSize="12sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/position_name"
         tools:text="180" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/static_equals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="= "
+        android:textSize="12sp"
         app:layout_constraintRight_toLeftOf="@+id/position_price_multiple_quantity"
         app:layout_constraintTop_toBottomOf="@+id/position_name" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/position_cost_per_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textSize="12sp"
         app:layout_constraintRight_toLeftOf="@+id/static_equals"
         app:layout_constraintTop_toBottomOf="@+id/position_name"
         tools:text="900" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/static_x"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" X "
+        android:textSize="12sp"
         app:layout_constraintRight_toLeftOf="@+id/position_cost_per_one"
         app:layout_constraintTop_toBottomOf="@+id/position_name" />
 
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/position_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="12sp"
         app:layout_constraintRight_toLeftOf="@id/static_x"
         app:layout_constraintTop_toBottomOf="@+id/position_name"
         tools:text="2" />
 
     <TextView
+        android:id="@+id/nds_digit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
         android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/static_x"
+        tools:text="71.71"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/static_nds_equal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="= "
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintRight_toLeftOf="@+id/nds_digit"
+        app:layout_constraintTop_toBottomOf="@id/static_x"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/nds_percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintRight_toLeftOf="@+id/static_nds_equal"
+        app:layout_constraintTop_toBottomOf="@id/static_x"
+        tools:text="20%"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/static_nds"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="НДС "
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintRight_toLeftOf="@+id/nds_percent"
+        app:layout_constraintTop_toBottomOf="@id/static_x"
+        tools:visibility="visible" />
+
+
+    <TextView
         android:id="@+id/position_discount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="12sp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/static_x"
+        app:layout_constraintTop_toBottomOf="@id/static_nds"
         tools:text="20" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/static_position_discount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="СКИДКА= "
+        android:textSize="12sp"
         app:layout_constraintRight_toLeftOf="@id/position_discount"
-        app:layout_constraintTop_toBottomOf="@id/static_x" />
+        app:layout_constraintTop_toBottomOf="@id/static_nds" />
 
     <TextView
-        android:textSize="12sp"
+        android:id="@+id/position_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/position_cost"
-        tools:text="1203"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/static_position_discount"/>
-    <TextView
         android:textSize="12sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/static_position_discount"
+        tools:text="1203" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ЦЕНА= "
-        app:layout_constraintTop_toBottomOf="@id/static_position_discount"
-        app:layout_constraintRight_toLeftOf="@+id/position_cost"/>
-
+        android:textSize="12sp"
+        app:layout_constraintRight_toLeftOf="@+id/position_cost"
+        app:layout_constraintTop_toBottomOf="@id/static_position_discount" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
