Разделитель даты между чеками в списке отображение. Работающая навигация по датам

--- a/app/src/main/res/layout/receipt_fragment.xml
+++ b/app/src/main/res/layout/receipt_fragment.xml
@@ -11,6 +11,6 @@
         android:id="@+id/receipt_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/receipt_item" />
+        tools:listitem="@layout/item_receipt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
