--- a/app/src/main/res/layout/fragment_receipt_detail.xml
+++ b/app/src/main/res/layout/fragment_receipt_detail.xml
@@ -76,7 +76,7 @@
                 android:id="@+id/position_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/position_item"/>
+                tools:listitem="@layout/item_position"/>
 
             <!--<TextView
                 android:id="@+id/position_list"
