--- a/app/src/main/res/layout/fragment_receipt_detail.xml
+++ b/app/src/main/res/layout/fragment_receipt_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ReceiptDetailFragment">
+    tools:context=".tabs.fragments.ReceiptDetailFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                 tools:text="12345" />
 
             <TextView
-                android:id="@+id/shift_number"
+                android:id="@+id/session_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Смена №"
-                app:layout_constraintRight_toLeftOf="@id/shift_number"
+                app:layout_constraintRight_toLeftOf="@id/session_id"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
