Добавил службу отслеживания открытой сессии

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,5 +44,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-    <include layout="@layout/menu_left" />
+    <include
+        layout="@layout/menu_left"
+        android:fastScrollEnabled="false" />
 </androidx.drawerlayout.widget.DrawerLayout>
